[gd_scene load_steps=2 format=3 uid="uid://cd8gnh3y8ngv0"]

[ext_resource type="Script" path="res://Control.gd" id="1_65etj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65etj")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -100.0
offset_right = 64.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 61.0
offset_right = 91.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "ghiceste"

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -106.0
offset_right = 216.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -100.0
offset_right = 219.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 54.0
offset_right = 866.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 30
text = "scrie un numar intre 1-10 in casuta de mai jos"
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = 43.0
offset_right = 214.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 519.0
offset_top = 452.0
offset_right = 661.0
offset_bottom = 506.0
theme_override_font_sizes/font_size = 30
text = "din nou"
